Improve galleries: remove custom image size, make sure thinner gallery sizes are centered and wrap to content, ensure that oversized class is never applied to images.

--- a/css/galleries.css
+++ b/css/galleries.css
@@ -28,6 +28,8 @@
 
 .gallery-columns-1 {
   text-align: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .gallery-columns-1 .gallery-item {
@@ -88,10 +90,15 @@
   margin-right: 0;
 }
 
-.gallery-columns-1.gallery-size-medium figure.gallery-item:nth-of-type(1n+1),
-.gallery-columns-1.gallery-size-thumbnail figure.gallery-item:nth-of-type(1n+1),
-.gallery-columns-2.gallery-size-thumbnail figure.gallery-item:nth-of-type(2n+1),
-.gallery-columns-3.gallery-size-thumbnail figure.gallery-item:nth-of-type(3n+1) {
+.gallery-columns-1 figure.gallery-item:nth-of-type(1n+1),
+.gallery-columns-2 figure.gallery-item:nth-of-type(2n+1),
+.gallery-columns-3 figure.gallery-item:nth-of-type(3n+1),
+.gallery-columns-4 figure.gallery-item:nth-of-type(4n+1),
+.gallery-columns-5 figure.gallery-item:nth-of-type(5n+1),
+.gallery-columns-6 figure.gallery-item:nth-of-type(6n+1),
+.gallery-columns-7 figure.gallery-item:nth-of-type(7n+1),
+.gallery-columns-8 figure.gallery-item:nth-of-type(8n+1),
+.gallery-columns-9 figure.gallery-item:nth-of-type(9n+1) {
   clear: left;
 }
 
@@ -129,4 +136,18 @@
 
 .gallery-item:hover .gallery-caption {
   opacity: 1;
+}
+
+.gallery-columns-1.gallery-size-thumbnail,
+.gallery-columns-1.gallery-size-medium,
+.gallery-columns-1.gallery-size-large,
+.gallery-columns-2.gallery-size-thumbnail,
+.gallery-columns-2.gallery-size-medium,
+.gallery-columns-3.gallery-size-thumbnail,
+.gallery-columns-4.gallery-size-thumbnail,
+.gallery-columns-5.gallery-size-thumbnail {
+  width: fit-content;
+  width: -moz-fit-content;
+  width: -webkit-fit-content;
+  margin: 0 auto;
 }
